[cssom] Do not serialize shorthands with pending-substitution values

According to the spec [1], shorthands with pending-substitution values
should be serialized as empty strings. Only shorthands which were
specified with explicit var() references should be serialized to the
original value. Update our implementation to match this.

[1]: https://drafts.csswg.org/css-variables/#variables-in-shorthands

Bug: 687653
Change-Id: Icb3acdcc88452a32077fe7f67ecc6c3614b4d91c
Reviewed-on: https://chromium-review.googlesource.com/994734
Reviewed-by: Timothy Loh <timloh@chromium.org>
Commit-Queue: Chris Nardi <cnardi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#547991}
Former-commit-id: 84ddde74a06ce9722953405b94d720b36e3dccef